small scrollbar fix

--- a/Front-end/src/app/components/forecastcard/forecastcard.component.css
+++ b/Front-end/src/app/components/forecastcard/forecastcard.component.css
@@ -1,9 +1,8 @@
-
 .info::-webkit-scrollbar {
-    width: 10px;
-  }
-  .info::-webkit-scrollbar-thumb {
+    width: 3px;
+}
+.info::-webkit-scrollbar-thumb {
     background-color: #39394c;
     border-radius: 0.5rem;
-  }
+}
   
